	* Features:
	    - Implement set_linear_classifier for static interfaces.
		- Implement Polynomial DotFeatures.
		- Speed up MCSVM.
		- Saving and Loading of shogun objects.
		- Examples have been polished/split up into separate files.
	* Bugfixes:
		- Fix one class MKL for static interfaces.
		- Fix performance measures integer overflow.
		- Configure fixes to run under OSX's snow leopard.
	* Cleanup and API Changes:
		- It is no longer necessary to call init_kernel TRAIN/TEST.
		- Removed kernel {load,save}_init.
		- Move the mkl code from classifier/svm to classifier/mkl

2009-08-16 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.8.0 (libshogun 4.0, libshogunui 2.0)
	* This release contains several cleanups, features and bugfixes:
	* Features:
		- Implements new multiclass svm formulation.
		- 1,2 and general q-norm MKL for classification, regression and
		one-class for wrapper and chunking algorithm for arbitrary (dual) SVM
		solvers.
		- Dynamic Programming code is now accessible from python.
		- Implements Regulatory Modules kernel.
		- Documentation updates (Tutorial, improved installation instructions,
				overview about the implemented algorithms).
	* Bugfixes:
		- Correct q-norm MKL for Newton.
		- Upon make install of elwms don't install files into R/octave/python
		if these interfaces were not configured
		- Svm-nu parameter was not set correctly.
		- Fix custom kernel initialization.
		- Correct get_subkernel_weights.
		- Proper Intel core2 compile flags detection
		- Fix number of outputs for KNN.
		- Run tests with proper LD_LIBRARY_PATH set.
		- Fix several memory leaks.
	* Cleanup and API Changes:
		- Rename svm_one_class_nu to svm_nu.
		- Clean up dynamic programming code.
		- Remove commands from_position_list and slide_window and move
		functionallity into set/add_features,
		- Remove now obsolete legacy examples.

2009-05-02 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.7.3 (libshogun 3.0, libshogunui 1.1)