@@ -11,7 +11,7 @@ def liblinear ():
 	feats_test=SparseRealFeatures()
 	feats_test.obtain_from_simple(realfeat)
 
-	C=0.42
+	C=0.9
 	epsilon=1e-5
 	num_threads=1
 	labels=Labels(label_train_twoclass)
