@@ -13,7 +13,7 @@ def krr ():
 	width=0.8
 	kernel=GaussianKernel(feats_train, feats_train, width)
 
-	C=0.42
+	C=0.9
 	tau=1e-6
 	labels=Labels(label_train)
 
