@@ -12,10 +12,12 @@
 		- Fix one class MKL for static interfaces.
 		- Fix performance measures integer overflow.
 		- Configure fixes to run under OSX's snow leopard.
+		- Compiles and runs under solaris both using suncc and gcc.
 	* Cleanup and API Changes:
 		- It is no longer necessary to call init_kernel TRAIN/TEST.
 		- Removed kernel {load,save}_init.
-		- Move the mkl code from classifier/svm to classifier/mkl
+		- Move the mkl code from classifier/svm to classifier/mkl.
+		- Removed obsolete mindy support.
 
 2009-08-16 Soeren Sonnenburg <sonne@debian.org>
 
